# 2D-Engine

./: README.md
rendering_engine_2d_batch_demo/: CMakeLists.txt  LICENSE  README.md
rendering_engine_2d_batch_demo/include/: Renderer2D.hpp  Shader.hpp
rendering_engine_2d_batch_demo/shaders/: quad.frag  quad.vert
rendering_engine_2d_batch_demo/src/: Renderer2D.cpp  Shader.cpp  main.cpp
